--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://localhost:8100 ws://localhost:35729 data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *;script-src 'self' localhost:35729 'unsafe-eval' 'unsafe-inline';"> -->
     <title>Snapchat</title>
-
     <link rel="manifest" href="manifest.json">
-
     <!-- un-comment this code to enable service worker
     <script>
       if ('serviceWorker' in navigator) {
@@ -16,7 +14,6 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
 
@@ -28,12 +25,12 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <script src="cordova.js"></script>
+    <!-- <script src="cordova.js"></script> -->
 
     <script src="app/app.js"></script>
-    <!-- <script src="js/routes.js"></script> -->
     <script src="app/mainCtrl.js"></script>
     <script src="app/services/mainService.js"></script>
+
     <script src="app/components/addedMe/addedMeCtrl.js"></script>
     <script src="app/components/addFriends/addFriendsCtrl.js"></script>
     <script src="app/components/addUsername/addUsernameCtrl.js"></script>
