More styles and routes. Added views and fixed css. More icons. Better icons.

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -25,7 +25,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
-    <!-- <script src="cordova.js"></script> -->
+    <script src="cordova.js"></script>
 
     <script src="app/app.js"></script>
     <script src="app/mainCtrl.js"></script>
