--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -22,6 +22,7 @@
     -->
 
     <!-- ionic/angularjs js -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
@@ -30,6 +31,9 @@
     <script src="app/app.js"></script>
     <script src="app/mainCtrl.js"></script>
     <script src="app/services/mainService.js"></script>
+    <script src="app/services/tempService.js"></script>
+    <script src="app/directives/animateChatNav.js"></script>
+    <script src="app/directives/animateProfileNav.js"></script>
 
     <script src="app/components/addedMe/addedMeCtrl.js"></script>
     <script src="app/components/addFriends/addFriendsCtrl.js"></script>
@@ -54,6 +58,13 @@
   <body ng-controller="mainCtrl" animation="slide-left-right-ios7">
     <!-- <ion-nav-bar></ion-nav-bar> -->
     <ion-nav-view></ion-nav-view>
+
+    <nav id="index-html__nav-bottom" class="nav-bottom">
+        <button id="index-html__chat-btn" class="icon-btn" ui-sref="chat" ui-sref-active="active-state" animate-chat-nav ng-click="addChattyNav()"></button>
+        <button id="index-html__take-photo-btn" class="icon-btn" ui-sref="camera" ui-sref-active="active-state" ng-click="takePhoto(); removeChattyNav(); removeProfileNav()" animate-chat-nav animate-profile-nav></button>
+        <button id="index-html__dots-btn" class="icon-btn" ui-sref-active="active-state"></button>
+    </nav>
+
     <!-- <ion-pane>
       <ion-header-bar class="bar-stable">
         <h1 class="title">Ionic Blank Starter</h1>
