--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -26,6 +26,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
+    <script src="./app/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
     <script src="app/app.js"></script>
