added token-based authorization

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -26,6 +26,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <script src="./app/ng-cordova.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.js"></script>
+
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
@@ -54,6 +56,9 @@
     <script src="app/components/sendTo/sendToCtrl.js"></script>
     <script src="app/components/settings/settingsCtrl.js"></script>
     <script src="app/components/signUp/signUpCtrl.js"></script>
+    <script src="app/components/signUp/signUp-email/signUp-emailCtrl.js" charset="utf-8"></script>
+    <script src="app/components/signUp/signUp-password/signUp-passwordCtrl.js" charset="utf-8"></script>
+    <script src="app/components/signUp/signUp-username/signUp-usernameCtrl.js" charset="utf-8"></script>
     <script src="app/components/watchMessages/watchMessagesCtrl.js"></script>
 
     <script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
