added styling to sub-settings pages

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -51,7 +51,9 @@
     <script src="app/components/myFriends/myFriendsCtrl.js"></script>
     <!-- <script src="app/components/nav/navCtrl.js"></script> -->
     <script src="app/components/editMessage/editMessageCtrl.js"></script>
+    <script src="app/components/name/nameCtrl.js" charset="utf-8"></script>
     <script src="app/components/password/passwordCtrl.js"></script>
+    <script src="app/components/newPassword/newPasswordCtrl.js" charset="utf-8"></script>
     <script src="app/components/profile/profileCtrl.js"></script>
     <script src="app/components/sendTo/sendToCtrl.js"></script>
     <script src="app/components/settings/settingsCtrl.js"></script>
