added confirm Password page and update email works front to back

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -45,6 +45,7 @@
     <script src="app/components/chat/chatCtrl.js"></script>
     <script src="app/components/editMessage/editMessageCtrl.js"></script>
     <script src="app/components/email/emailCtrl.js"></script>
+    <script src="app/components/confirmPassword/confirmPasswordCtrl.js" charset="utf-8"></script>
     <script src="app/components/logIn/logInCtrl.js"></script>
     <script src="app/components/logInSignUp/logInSignUpCtrl.js"></script>
     <script src="app/components/myFriends/myFriendsCtrl.js"></script>
