--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -16,6 +16,7 @@
     </script>-->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
     <!-- If using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
