drawing feature working

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -16,6 +16,7 @@
     </script>-->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
+    <!-- <link href="./css/www/main.css" rel="stylesheet"> -->
 
     <!-- If using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -28,6 +29,7 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <script src="./app/ng-cordova.min.js"></script>
+    <script src="./lib/signature_pad/signature_pad.js"></script>
     <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.js"></script>
 
     <script src="app/app.js"></script>
