geofilter sketch works

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -14,7 +14,7 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-    <link rel="icon" href="img/icon/ghost.png" type="image/x-icon" />
+    <link rel="icon" href="img/icon/ghost.png" type="image/x-icon">
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="./main.css" rel="stylesheet">
     <!-- <link href="./css/www/main.css" rel="stylesheet"> -->
