9000 and mustache filters exist

--- a/snapchap/www/index.html
+++ b/snapchap/www/index.html
@@ -6,6 +6,7 @@
     <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' http://localhost:8100 ws://localhost:35729 data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *;script-src 'self' localhost:35729 'unsafe-eval' 'unsafe-inline';"> -->
     <title>Snapchat</title>
     <link rel="manifest" href="manifest.json">
+
     <!-- un-comment this code to enable service worker
     <script>
       if ('serviceWorker' in navigator) {
@@ -26,6 +27,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.js"></script>
+    <!-- <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script> -->
+    <script src="https://npmcdn.com/draggabilly@2.1/dist/draggabilly.pkgd.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
